# polymarket-autopilot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: fetch_markets.py  mean_reversion.py  place_order.py
src/polymarket_autopilot/: __init__.py  audit.py  market_snapshot.py  metrics.py  policy.py  state_machine.py
src/polymarket_autopilot/fetcher/: __init__.py  fetcher.py
src/polymarket_autopilot/trading/: __init__.py  trading.py
tests/: test_audit.py  test_fetcher.py  test_logic.py  test_market_snapshot.py  test_metrics.py  test_policy.py  test_state_machine.py  test_trading.py
