[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-autopilot"
version = "0.5.5"
description = "Polymarket trading client and market data fetcher"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "counterfactual5" },
]
keywords = ["polymarket", "prediction-market", "trading", "clob"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = []

[project.optional-dependencies]
trading = ["eth-account>=0.10"]
dev = ["pytest>=7.0", "pytest-cov", "ruff>=0.1.0"]

[project.urls]
Repository = "https://github.com/counterfactual5/polymarket-autopilot"
Issues = "https://github.com/counterfactual5/polymarket-autopilot/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_autopilot"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
pythonpath = ["src"]
